# globalvar

./: .gitignore  Cargo.toml  README.md  README_cn.md
src/: global_ptr.rs  lib.rs
