[package]
name = "globalvar"
version = "0.1.0-dev"
edition = "2021"
authors = ["HellyGuo <hellyguo@foxmail.com>"]
exclude = ["tests", "test_data", "benches", "examples", ".vscode"]
homepage = ""
repository = ""
license = "Apache-2.0"
readme = "README.md"
description = ""
categories = [""]
documentation = ""
keywords = [""]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
hashbrown = "0.15.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
