[package]
name = "globalvar"
version = "0.1.0"
edition = "2021"
authors = ["HellyGuo <hellyguo@foxmail.com>"]
exclude = ["tests", "test_data", "benches", "examples", ".vscode"]
homepage = "https://itcraft.cn/globalvar/"
repository = "https://github.com/itcraft-cn/globalvar"
license = "Apache-2.0"
readme = "README.md"
description = "declaring a global variable"
categories = ["data-structures"]
documentation = "https://docs.rs/crate/globalvar/latest"
keywords = ["global"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
hashbrown = "0.15.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
